[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biapy"
version = "3.6.1"
description = "BiaPy: Bioimage analysis pipelines in Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Daniel Franco-Barranco", email = "daniel.franco@dipc.org" }]
maintainers = [{ name = "Daniel Franco-Barranco", email = "daniel.franco@dipc.org" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8",
    "Programming Language :: Python :: 3.10",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "matplotlib>=3.7.1",
    "scikit-learn>=1.4.0",
    "pydot>=1.4.2",
    "yacs>=0.1.8",
    "tqdm>=4.66.1",
    "scikit-image>=0.21.0",
    "edt>=2.3.2",
    "numpy>2",
    "fill-voids>=2.0.6",
    "opencv-python>=4.8.0.76",
    "pandas>=1.5.3",
    "torchinfo>=1.8.0",
    "tensorboardX>=2.6.2.2",
    "h5py>=3.9.0",
    "zarr>=2.16.1,<3.0",
    "bioimageio.core==0.8.0",
    "imagecodecs>=2024.1.1",
    "pooch>=1.8.1",
    "diplib>=3.5.1",
    "xarray==2025.1.*",
]

[project.scripts]
biapy = "biapy:main"

[project.urls]
"Homepage" = "https://biapyx.github.io"
"Source" = "https://github.com/BiaPyX/BiaPy"
"Forum" = "https://forum.image.sc/tag/biapy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['biapy*']
