[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biapy"
version = "3.6.8"
description = "BiaPy: Bioimage analysis pipelines in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Franco-Barranco", email = "daniel.franco@dipc.org" }]
maintainers = [{ name = "Daniel Franco-Barranco", email = "daniel.franco@dipc.org" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8",
    "Programming Language :: Python :: 3.11",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "matplotlib>=3.7.1",
    "scikit-learn>=1.4.0",
    "pydot>=1.4.2",
    "yacs>=0.1.8",
    "tqdm>=4.66.1",
    "scikit-image>=0.21.0",
    "edt>=2.3.2",
    "numpy>1.26",
    "fill-voids>=2.0.6",
    "opencv-python>=4.8.0.76",
    "pandas>=1.5.3",
    "torchinfo>=1.8.0",
    "tensorboardX>=2.6.2.2",
    "h5py>=3.9.0",
    "zarr>=3.1.5",
    "bioimageio.core==0.9.5",
    "imagecodecs>=2024.1.1",
    "pooch>=1.8.1",
    "xarray==2025.1.*",
    "timm==1.0.14",
    "pytorch-msssim",
    "torchmetrics[image]==1.4.*",
    "safetensors",
    "torch>=2.9.1,<2.10",
    "torchvision>=0.24.1,<0.25",
]

[project.scripts]
biapy = "biapy:main"

[project.urls]
"Homepage" = "https://biapyx.github.io"
"Source" = "https://github.com/BiaPyX/BiaPy"
"Forum" = "https://forum.image.sc/tag/biapy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['biapy*']
